--- a/formularios/registro.html
+++ b/formularios/registro.html
@@ -22,7 +22,7 @@
       <div class="form-group">
         <label for="txtContra">Contraseña</label>
         <div class="col-md-12">
-          <input id="txtContra" type="password" name="txtContra" placeholder="ocho Caracteres Minimo" class="form-control">
+          <input id="txtContra" type="password" name="txtContra" placeholder="cinco Caracteres Minimo" class="form-control">
         </div>
       </div>
 
